--- a/res/layout/actionbar_item.xml
+++ b/res/layout/actionbar_item.xml
@@ -2,34 +2,51 @@
 <RelativeLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="fill_parent"
-		android:layout_height="48dp">
-	<ImageView
-			android:layout_width="wrap_content"
-			android:layout_centerVertical="true"
-			android:src="@drawable/ic_launcher"
-			android:layout_height="wrap_content"/>
-	<LinearLayout
-			android:layout_width="wrap_content"
-			android:orientation="horizontal"
-			android:layout_centerInParent="true"
-			android:layout_height="wrap_content">
-		<TextView
+		android:layout_height="wrap_content">
+	<RelativeLayout
+			android:layout_width="fill_parent"
+			android:background="@drawable/bg_downline_common"
+			android:layout_height="@dimen/actionbar_item_height">
+		<ImageView
+				android:id="@+id/img_actionbar_left"
 				android:layout_width="wrap_content"
-				android:text="精选"
-				android:textSize="19sp"
+				android:layout_centerVertical="true"
+				android:src="@drawable/icon_instruction_common"
 				android:layout_height="wrap_content"/>
-		<TextView
-				android:layout_marginLeft="5dp"
+		<ImageView
+				android:id="@+id/img_actionbar_right"
 				android:layout_width="wrap_content"
-				android:text="收藏"
-				android:textSize="19sp"
+				android:src="@drawable/icon_list_person_rest"
+				android:layout_alignParentRight="true"
+				android:layout_centerVertical="true"
 				android:layout_height="wrap_content"/>
-
-	</LinearLayout>
-	<ImageView
-			android:layout_width="wrap_content"
-			android:src="@drawable/ic_launcher"
-			android:layout_alignParentRight="true"
-			android:layout_centerVertical="true"
-			android:layout_height="wrap_content"/>
+		<LinearLayout
+				android:layout_width="fill_parent"
+				android:orientation="horizontal"
+				android:layout_toRightOf="@id/img_actionbar_left"
+				android:layout_toLeftOf="@id/img_actionbar_right"
+				android:layout_marginLeft="15dp"
+				android:layout_marginRight="15dp"
+				android:layout_centerInParent="true"
+				android:layout_height="wrap_content">
+			<TextView
+					android:id="@+id/tv_actionbar_left_text"
+					android:layout_width="wrap_content"
+					android:layout_height="@dimen/actionbar_item_text_height"
+					android:layout_weight="1"
+					android:gravity="center"
+					android:text="精选"
+					android:textSize="21sp"
+					/>
+			<TextView
+					android:id="@+id/tv_actionbar_right_text"
+					android:layout_width="wrap_content"
+					android:layout_height="@dimen/actionbar_item_text_height"
+					android:layout_weight="1"
+					android:gravity="center"
+					android:text="收藏"
+					android:textSize="21sp"
+					/>
+		</LinearLayout>
+	</RelativeLayout>
 </RelativeLayout>
