--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  android:orientation="vertical"
+			  android:background="@color/bg_main"
 			  android:layout_width="fill_parent"
-			  android:layout_height="fill_parent"
-		>
-	<include layout="@layout/actionbar_item"></include>
+			  android:layout_height="fill_parent">
+	<com.android.View.ActionBarItemView
+			android:id="@+id/action_bar"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			/>
 </LinearLayout>
 
